--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="index, follow">
 
     <!--  -->
-    <meta property="og:url" content="https://insighter.com">
+    <meta property="og:url" content="https://insighter-explorer.netlify.app">
     <meta property="og:site_name" content="Insighter TON Explorer">
 
     <meta name="twitter:card" content="summary_large_image">
@@ -27,6 +27,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700&display=swap" rel="stylesheet">
+
+    <link rel="preload" as="image" href="/in-logo-circle.svg" type="image/svg+xml">
+    <link rel="preload" as="image" href="/in-logo.svg" type="image/svg+xml">
 
     <style>
       html, body {
