--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Insighter, TON Explorer, The Open Network, TON блокчейн, TON аналитика, криптовалюта, адреса TON, транзакции, блоки TON, Explorer TON">
     <meta name="author" content="Insighter Team">
     <meta property="og:title" content="Insighter TON Explorer | The Open Network">
-    <meta property="og:description" content="Изучайте блокчейн TON с Insighter TON Explorer. Вся информация об адресах, транзакциях и аналитике в одном месте.">
+    <meta property="og:description" content="Изучайте блокчейн TON с Insighter. Вся информация об адресах, транзакциях и аналитике в одном месте.">
     <meta property="og:image" content="/insighter-logo.png">
     <meta property="og:type" content="website">
     <meta name="robots" content="index, follow">
@@ -20,7 +20,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Insighter TON Explorer | The Open Network">
-    <meta name="twitter:description" content="Изучайте блокчейн TON с Insighter TON Explorer. Полная информация об адресах, транзакциях и аналитике блокчейна TON.">
+    <meta name="twitter:description" content="Изучайте блокчейн TON с Insighter. Полная информация об адресах, транзакциях и аналитике блокчейна TON.">
     <meta name="twitter:image" content="/insighter-logo.png">
     <meta name="twitter:site" content="@InsighterTON">
 
